feat: add API Key auth, pagination, and docs improvements
- Add Spring Security with stateless API Key authentication (X-API-Key header)
- Add ApiKeyAuthFilter and SecurityConfig with public endpoints whitelist
- Add PaymentPage domain value object (framework-free)
- Add PagedPaymentResponse DTO for paginated HTTP responses
- Update LoadPaymentPort and QueryPaymentUseCase with paginated signatures
- Update QueryPaymentService, PaymentJpaRepository, PaymentPersistenceAdapter
- Update PaymentController with page/size params (default 0/20, max 100)
- Update integration and unit tests for security and pagination
- Add Mermaid architecture diagram to README
- Add detailed 'Como rodar localmente' section with env vars and troubleshooting
- Add Authentication section to README with API key usage examples